<resources>
    <string name="app_name">Interface Simple</string>
    <string name="submit_button">Soumettre</string>
    <string name="last_name">Nom :</string>
    <string name="first_name">Prénom :</string>
    <string name="age">Âge :</string>
    <string name="domain">Domaine de compétences :</string>
    <string name="phone">Téléphone :</string>
    <string name="enter_first_name">Entrez votre prénom</string>
    <string name="enter_last_name">Entrez votre nom</string>
    <string name="enter_age">Entrez votre âge</string>
    <string name="enter_domain">Ex: GL, IASD, IMAGINE...</string>
    <string name="enter_number">Entrez votre numéro</string>
</resources>