<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_name" />

    <EditText
        android:id="@+id/nomEditText"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:hint="@string/enter_last_name" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_name" />

    <EditText
        android:id="@+id/prenomEditText"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:hint="@string/enter_first_name" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age" />

    <EditText
        android:id="@+id/ageEditText"
        android:layout_width="378dp"
        android:layout_height="55dp"
        android:hint="@string/enter_age"
        android:inputType="number" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/domain" />

    <EditText
        android:id="@+id/domaineEditText"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:hint="@string/enter_domain" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone" />

    <EditText
        android:id="@+id/phoneEditText"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:hint="@string/enter_number"
        android:inputType="phone" />

    <Button
        android:id="@+id/validerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit_button"/>
</LinearLayout>